# meshes.rs

./: .gitignore  Cargo.toml  README.md
assets/models/stl/: hello.stl
examples/: load_stl.rs
src/: lib.rs  mesh.rs  vertex.rs
src/geom/: mod.rs  vector.rs
src/io/: mod.rs
src/io/amf/: mod.rs  writer.rs
src/io/ply/: mod.rs  writer.rs
src/io/stl/: mod.rs  reader.rs  writer.rs
src/simplification/: melax.rs  mod.rs
src/utils/: buffer.rs  mod.rs
tests/: stl.rs
